# smart-home

./: Cargo.toml  README.md
smart-home-lib/: Cargo.toml  README.md
smart-home-lib/examples/: basic_usage.rs  controllers_usage.rs  socket_client.rs  socket_emulator.rs  therm_client.rs  therm_emulator.rs  udp_listener.rs
smart-home-lib/src/: controllers.rs  device.rs  devices.rs  emulators.rs  house.rs  lib.rs  protocol.rs  room.rs  traits.rs  units.rs
smart-home-lib/src/controllers/: socket_controller.rs  therm_controller.rs
smart-home-lib/src/device/: smart_socket.rs  smart_therm.rs
smart-home-lib/src/devices/: mod.rs  smart_socket.rs  smart_therm.rs
smart-home-lib/src/emulators/: scenario.rs  socket_emulator.rs  therm_emulator.rs
smart-home-lib/src/protocol/: socket_protocol.rs  therm_protocol.rs
smart-home-lib/src/units/: celsius.rs  watts.rs
