[package]
name = "smart-home-lib"
version = "0.1.0"
edition = "2024"
authors = ["Aleksey Dyakonov <i@dyakonoff.ru>"]
description = "Core library for Smart Home system"
license = "MIT"
readme = "README.md"

[lib]
name = "smart_home_lib"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]

[dev-dependencies]
approx = "0.5.1"
