[package]
name = "smart-home-lib"
version = "0.1.0"
edition = "2024"
authors = ["Aleksey Dyakonov <i@dyakonoff.ru>"]
description = "Core library for Smart Home system"
license = "MIT"
readme = "README.md"

[lib]
name = "smart_home_lib"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
